--- a/noom/package.json
+++ b/noom/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "socketio": "^1.0.0",
     "web-vitals": "^2.1.4",
     "ws": "^8.14.2"
   },
